OSX - Z-Index Fixes

--- a/OSX/OSX.css
+++ b/OSX/OSX.css
@@ -54,7 +54,7 @@
     backdrop-filter: blur(10px);
     box-shadow: 0 0 0 0.6pt var(--macbuttons-outline-color);
     border-radius: 12px;
-    z-index: 9999999;
+    z-index: 999999;
     cursor: pointer;
     font-weight: 400;
 }
@@ -84,7 +84,7 @@
     line-height: 32px;
     font-weight: regular;
     text-align: center;
-    z-index: 99999;
+    z-index: 9999;
     height: 32px;
     -webkit-app-region: drag;
     border-radius: 8px 8px 0 0;
@@ -114,7 +114,7 @@
 
 .layer-3QrUeG:not(.baseLayer-35bLyl),
 .layer-86YKbF:not(.baseLayer-W6S8cY) {
-    z-index: 9999;
+    z-index: 999;
 }
 
 .layer-3QrUeG.baseLayer-35bLyl,
